renamed chatbox to mapConnections; started using aeson

--- a/mapConnections.html
+++ b/mapConnections.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <script src="chatbox.js"></script>
+    <script src="mapConnections.js"></script>
     Name: <input type="text" id="name" value="Anon-kun"><br>
     <textarea rows="30" cols="160" id="chat" readonly=""></textarea><br>
     <input type="text" id="message">
