added some controls above the map

--- a/mapConnections.html
+++ b/mapConnections.html
@@ -4,6 +4,9 @@
 <title>Dynamic TCP Connection Map</title>
 <link href="style.css" rel="stylesheet">
 <body>
+        <button type="button" class="topBarItem">View Entire World</button>
+        <button type="button" class="topBarItem">Clear Expired Connections</button>
+        <label class="topBarItem" ><input type="checkbox"  name="checkbox" value="value">Automatically Clear Expired Connections</label>
     <div id="map-canvas"></div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="drop.js"></script>
