adding easy zoom in and world view functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
 
-            <li><button type="button" class="btn btn-default navbar-btn">World View</button> </li>
+            <li><button type="button" class="btn btn-default navbar-btn" onClick="worldView();">World View</button> </li>
             <li><button type="button" class="btn btn-default navbar-btn">Clear All</button> </li>
             <li><button type="button" class="btn btn-default navbar-btn">Clear Expired</button> </li>
 
