--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>
               <form class="navbar-form pull-left">
                 <input type="checkbox">
-                <button type="submit" class="btn btn-default">Autoclear Expired</button>
+                <button type="button" class="btn btn-default">Autoclear Expired</button>
               </form>
             </li>
 
