renaming to geoSniff and starting to separate client and server code.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="map-canvas"></div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
     <script src="drop.js"></script>
-    <script src="mapConnections.js"></script>
+    <script src="geoSniffClient.js"></script>
     <script src="jquery/dist/jquery.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
