adding globe-icon id to globe icon for color setting purposes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Server Address" name="server-address" id="server-address">
                         <div class="input-group-btn">
-                            <button type="button" class="btn btn-default" onClick="connectToServer();"><i class="glyphicon glyphicon-globe"></i></button>
+                            <button type="button" class="btn btn-default" onClick="connectToServer();"><i id="globe-icon" class="glyphicon glyphicon-globe"></i></button>
                         </div>
                     </div>
                 </form>
