--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>GeoSniff!</title>
 <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
+<link href="navbar.css" rel="stylesheet">
 <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -15,7 +16,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">GeoSniff!</a>
+          <a class="navbar-brand" href="#"><img src="/assets/sniffingDog4.png" height="50px" ></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
