adding a little liquid templating to get page to show on github

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -16,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="/assets/sniffingDog4.png" height="50px" ></a>
+          <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/assets/sniffingDog4.png" height="50px" ></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
